# tock_client

./: .gitignore  CMakeLists.txt  Makefile  Makefile.darwin  README.org  makefile
assets/: Settings  Style
doc/: Doxyfile
doc/html/: _color_8c.html  _color_8h.html  _color_8h_source.html  _linkedlist-example.html  _player_8c.html  _player_8h.html  _player_8h_source.html  annotated.html  board_8c.html  board_8h.html  board_8h_source.html  bord_8c.html  bord_8h.html  bord_8h_source.html  card_8c.html  card_8h.html  card_8h_source.html  classes.html  deprecated.html  dir_5513b474da4904a7cff3f1891ec9025c.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b5b569d6217ea18a9daa9f1853463845.html  dir_ed353eea8d78a173a119b387b77c750d.html  doxygen.css  examples.html  files.html  functions.html  functions_vars.html  game_8c.html  game_8h.html  game_8h_source.html  game_rule_8c.html  game_rule_8h.html  game_rule_8h_source.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  (+35 more)
doc/latex/: _color_8c.tex  _color_8h.tex  _color_8h_source.tex  _linkedlist-example.tex  _player_8c.tex  _player_8h.tex  _player_8h_source.tex  annotated.tex  board_8c.tex  board_8h.tex  board_8h_source.tex  bord_8c.tex  bord_8h.tex  (+47 more)
src/: Color.c  Color.h  Player.c  Player.h  TODO  board.c  board.h  bord.c  bord.h  card.c  card.h  game.c  game.h  game.xml  gameRule.c  gameRule.h  linkedlist.c  linkedlist.h  main.c  mainClient.c  mainSDL.c  mainSDL.h  mainServer.c  mainServeur.c  menu.c  parser.c  parser.h  pawn.c  pawn.h
test/: main_test.c
(+125 files in other folders)
